profilelist1exp/unpackaged/objects/Opportunity_Details_Extra__c.object
<CustomObject>
    <fields>
        <fullName>MDC_USE_Case__c</fullName>
        <inlineHelpText>What is the customer&apos;s use case, or reason for this MDC Opportunity?</inlineHelpText>
        <label>MDC USE Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active/Active Data Centers</fullName>
                </value>
                <value>
                    <fullName>Alternative Hypervisor – Acropolis (Nutanix)</fullName>
                </value>
                <value>
                    <fullName>Alternative Hypervisor – Hyper-V</fullName>
                </value>
                <value>
                    <fullName>Alternative Hypervisor – KVM</fullName>
                </value>
                <value>
                    <fullName>Alternative Hypervisor – Other</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Artificial Intelligence</fullName>
                </value>
                <value>
                    <fullName>AzureStack</fullName>
                </value>
                <value>
                    <fullName>Backup/Recovery</fullName>
                </value>
                <value>
                    <fullName>BI/Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Business Data Lake</fullName>
                </value>
                <value>
                    <fullName>Capacity Expansion</fullName>
                </value>
                <value>
                    <fullName>Cloud Mobility</fullName>
                </value>
                <value>
                    <fullName>Containers</fullName>
                </value>
                <value>
                    <fullName>Custom Application(s)</fullName>
                </value>
                <value>
                    <fullName>Database – NoSQL</fullName>
                </value>
                <value>
                    <fullName>Database – Oracle</fullName>
                </value>
                <value>
                    <fullName>Database – SQL</fullName>
                </value>
                <value>
                    <fullName>Datacenter Consolidation</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>Digital Transformation</fullName>
                </value>
                <value>
                    <fullName>Financial Applications</fullName>
                </value>
                <value>
                    <fullName>Hadoop</fullName>
                </value>
                <value>
                    <fullName>Healthcare EMR – EPIC</fullName>
                </value>
                <value>
                    <fullName>Healthcare EMR – Meditech</fullName>
                </value>
                <value>
                    <fullName>Healthcare EMR – Other</fullName>
                </value>
                <value>
                    <fullName>Healthcare PACS</fullName>
                </value>
                <value>
                    <fullName>HPC</fullName>
                </value>
                <value>
                    <fullName>Image Archiving</fullName>
                </value>
                <value>
                    <fullName>Infrastructure as a Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mainframe_Comments__c</fullName>
        <inlineHelpText>Used by Mainframe team to capture their notes / comments on their deals.</inlineHelpText>
        <label>Mainframe Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Details Extras</relationshipLabel>
        <relationshipName>Opportunity_Details_Extras</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_EVAL_Quote_Number__c</fullName>
        <formula>Opportunity__r.Dell_Sales_FIM__Inventory_Request__r.Dell_Sales_FIM__Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original EVAL Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_EVAL_SO__c</fullName>
        <label>Original EVAL SO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Of_Eval__c</fullName>
        <formula>AND(Opportunity__r.RecordType.Name=&quot;Standard Opportunity&quot; , 
OR(ISPICKVAL(Opportunity__r.Dell_Sales_FIM__Inventory_Request__r.Dell_Sales_FIM__Inventory_Type__c, &apos;Eval&apos;), ISPICKVAL(Opportunity__r.Quote_Order_Type__c, &apos;SALE OF EVAL&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Of Eval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty_Deal_Engagement_DAE__c</fullName>
        <inlineHelpText>Please select the most applicable value to denote your engagement on this deal</inlineHelpText>
        <label>Specialty Sales Deal Engagement (DAE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DPS - Drive</fullName>
                </value>
                <value>
                    <fullName>DPS - Assist</fullName>
                </value>
                <value>
                    <fullName>DPS - Enable</fullName>
                </value>
                <value>
                    <fullName>MDC - Drive</fullName>
                </value>
                <value>
                    <fullName>MDC - Assist</fullName>
                </value>
                <value>
                    <fullName>MDC - Enable</fullName>
                </value>
                <value>
                    <fullName>UDS - Drive</fullName>
                </value>
                <value>
                    <fullName>UDS - Assist</fullName>
                </value>
                <value>
                    <fullName>UDS - Enable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Plays_Programs__c</fullName>
        <inlineHelpText>Please select the most applicable Plays and/or Programs that influenced this deal</inlineHelpText>
        <label>Specialty Plays &amp; Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cross-Specialties License Management Services</fullName>
                </value>
                <value>
                    <fullName>DPS 150</fullName>
                </value>
                <value>
                    <fullName>DPS Canada Top 200</fullName>
                </value>
                <value>
                    <fullName>DPS CleanSweep</fullName>
                </value>
                <value>
                    <fullName>DPS Competitive Trade-In</fullName>
                </value>
                <value>
                    <fullName>DPS Cyber Recovery</fullName>
                </value>
                <value>
                    <fullName>DPS Ent Central Unsolicited</fullName>
                </value>
                <value>
                    <fullName>DPS Federal Unsolicited Proposal</fullName>
                </value>
                <value>
                    <fullName>DPS Get Modern</fullName>
                </value>
                <value>
                    <fullName>DPS IBM Cyber Recovery</fullName>
                </value>
                <value>
                    <fullName>DPS IDPA Alternate Licensing</fullName>
                </value>
                <value>
                    <fullName>DPS Test Drive</fullName>
                </value>
                <value>
                    <fullName>MDC #GetModern Factory</fullName>
                </value>
                <value>
                    <fullName>MDC #RocktheBlock</fullName>
                </value>
                <value>
                    <fullName>MDC #VxSeals</fullName>
                </value>
                <value>
                    <fullName>MDC Competitive Takeout</fullName>
                </value>
                <value>
                    <fullName>MDC Growth &amp; Utilization</fullName>
                </value>
                <value>
                    <fullName>MDC Partner Led Test Drive Campaign</fullName>
                </value>
                <value>
                    <fullName>MDC Pick a Fight</fullName>
                </value>
                <value>
                    <fullName>MDC PowerMax Early Adopter</fullName>
                </value>
                <value>
                    <fullName>MDC Tech Refresh</fullName>
                </value>
                <value>
                    <fullName>MDC Test Drive Campaign</fullName>
                </value>
                <value>
                    <fullName>MDC VxFlex DB Targeting</fullName>
                </value>
                <value>
                    <fullName>MDC VxFlex Nutanix Attack</fullName>
                </value>
                <value>
                    <fullName>MDC VxFlex Value Workload</fullName>
                </value>
                <value>
                    <fullName>MDC VxRack FLEX Velocity Offer</fullName>
                </value>
                <value>
                    <fullName>MDC X1 Refresh</fullName>
                </value>
                <value>
                    <fullName>UDS Beachhead AI / ML / DL</fullName>
                </value>
                <value>
                    <fullName>UDS Centera / Atmos Replacement</fullName>
                </value>
                <value>
                    <fullName>UDS SP Beachhead ECS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TLA_Deal_Type__c</fullName>
        <inlineHelpText>1.0 upfront revenue &amp; 2.0= ratable revenue
Quick TLA best for Small customers
TLA standard for total license value minimum $500K
TLA premium for additional flexibility</inlineHelpText>
        <label>TLA Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premium Add-ons Simple (2.0)</fullName>
                </value>
                <value>
                    <fullName>Premium Add-ons Term (2.0)</fullName>
                </value>
                <value>
                    <fullName>Quick TLA Simple (1.0)</fullName>
                </value>
                <value>
                    <fullName>Quick TLA Term (1.0)</fullName>
                </value>
                <value>
                    <fullName>TLA Simple (1.0)</fullName>
                </value>
                <value>
                    <fullName>TLA Term (1.0)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TLA_Duration_months__c</fullName>
        <inlineHelpText>TLA Contract length</inlineHelpText>
        <label>TLA Duration (months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TLA_Forecast_Category__c</fullName>
        <inlineHelpText>Forecast Categories (Commit/Best Case/Pipeline/Omitted)</inlineHelpText>
        <label>TLA Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Best case</fullName>
                </value>
                <value>
                    <fullName>Pipeline – 30%</fullName>
                </value>
                <value>
                    <fullName>Pipeline – 10%</fullName>
                </value>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                    <isActive>false</isActive>
                    <label>--None--</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TLA_PPM_Duration_months__c</fullName>
        <inlineHelpText>TLA contract pre-paid maintenance length (excluding optional duration)</inlineHelpText>
        <label>TLA PPM Duration (months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TLA_PPM_install_base_renewals__c</fullName>
        <inlineHelpText>The portion of the PPM in the TLA allocated to Renewals for installed base capacity</inlineHelpText>
        <label>TLA PPM (install base/renewals)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TLA_Payment_Structure__c</fullName>
        <inlineHelpText>Select if deal is financed</inlineHelpText>
        <label>TLA Payment Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash TLA</fullName>
                </value>
                <value>
                    <fullName>DFS Embedded Terms</fullName>
                </value>
                <value>
                    <fullName>DFS IPA</fullName>
                </value>
                <value>
                    <fullName>DFS SW MLA Schedule</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                    <isActive>false</isActive>
                    <label>--None--</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TLA_Type__c</fullName>
        <inlineHelpText>TLA Type</inlineHelpText>
        <label>TLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New TLA</fullName>
                </value>
                <value>
                    <fullName>Addendum – Additional Titles</fullName>
                </value>
                <value>
                    <fullName>Addendum – True Up</fullName>
                </value>
                <value>
                    <fullName>TLA Refresh</fullName>
                </value>
                <value>
                    <fullName>Addendum – Contract Extension</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                    <isActive>false</isActive>
                    <label>--None--</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Net_TLA_License_Amount__c</fullName>
        <inlineHelpText>Total incremental license value (excluding Install Base (IB) maintenance)</inlineHelpText>
        <label>Total Net TLA License Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_TLA_Forecast_Amount__c</fullName>
        <formula>Total_Net_TLA_License_Amount__c +  Total_TLA_PPM_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Net TLA License Amount + Total TLA PPM Amount</inlineHelpText>
        <label>Total TLA Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_TLA_PPM_Amount__c</fullName>
        <inlineHelpText>Total pre-paid maintenance or CS SW forecasted value</inlineHelpText>
        <label>Total TLA PPM Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UDS_AE_Assisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UDS AE Assisted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UDS_Channel_LOC__c</fullName>
        <inlineHelpText>Use this field to capture the Channel Level of Contribution on this deal</inlineHelpText>
        <label>UDS Channel LOC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 High</fullName>
                </value>
                <value>
                    <fullName>2 Medium</fullName>
                </value>
                <value>
                    <fullName>3 Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Cloud_Service_Provider__c</fullName>
        <label>UDS Cloud Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Faction</fullName>
                </value>
                <value>
                    <fullName>Google Cloud</fullName>
                </value>
                <value>
                    <fullName>Not a Cloud Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Custom_Track__c</fullName>
        <inlineHelpText>Use this field to capture special tracking items for UDS</inlineHelpText>
        <label>UDS Custom Track</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UDS_ECS_Application_Opp__c</fullName>
        <label>UDS ECS Application (Opp)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_ECS_Workload_Opp__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning -- Intel</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning – No GPU</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Nvidia DGX</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- PowerEdge Nvidia</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning – Server + GPU</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive</fullName>
                </value>
                <value>
                    <fullName>Archive -- Cloud</fullName>
                </value>
                <value>
                    <fullName>Archive -- Content -- Satellite Images / GIS</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive</fullName>
                </value>
                <value>
                    <fullName>Backup -- Cloud</fullName>
                </value>
                <value>
                    <fullName>Backup -- Enterprise Backup</fullName>
                </value>
                <value>
                    <fullName>Health -- Digital Pathology</fullName>
                </value>
                <value>
                    <fullName>Health -- Healthcare Document Management</fullName>
                </value>
                <value>
                    <fullName>Health -- PACS Imaging</fullName>
                </value>
                <value>
                    <fullName>Health -- Vendor Neutral Archive</fullName>
                </value>
                <value>
                    <fullName>IOT Application</fullName>
                </value>
                <value>
                    <fullName>LifeSci -- Life Sciences Archive</fullName>
                </value>
                <value>
                    <fullName>Media -- Archive / Library</fullName>
                </value>
                <value>
                    <fullName>Media -- MAM / Broadcast Automation</fullName>
                </value>
                <value>
                    <fullName>Modern App Dev -- Pivotal</fullName>
                </value>
                <value>
                    <fullName>Modern Application</fullName>
                </value>
                <value>
                    <fullName>ROBO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_ECS_Application_Secondary__c</fullName>
        <label>UDS ECS Application (Secondary)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_ECS_Workload_Secondary__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning -- Intel</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning – No GPU</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Nvidia DGX</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- PowerEdge Nvidia</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Server + GPU</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive</fullName>
                </value>
                <value>
                    <fullName>Archive -- Cloud</fullName>
                </value>
                <value>
                    <fullName>Archive -- Content -- Satellite Images / GIS</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive</fullName>
                </value>
                <value>
                    <fullName>Backup -- Cloud</fullName>
                </value>
                <value>
                    <fullName>Backup -- Enterprise Backup</fullName>
                </value>
                <value>
                    <fullName>Health -- Digital Pathology</fullName>
                </value>
                <value>
                    <fullName>Health -- Healthcare Document Management</fullName>
                </value>
                <value>
                    <fullName>Health -- PACS Imaging</fullName>
                </value>
                <value>
                    <fullName>Health -- Vendor Neutral Archive</fullName>
                </value>
                <value>
                    <fullName>IOT Application</fullName>
                </value>
                <value>
                    <fullName>LifeSci -- Life Sciences Archive</fullName>
                </value>
                <value>
                    <fullName>Media -- Archive / Library</fullName>
                </value>
                <value>
                    <fullName>Media -- MAM / Broadcast Automation</fullName>
                </value>
                <value>
                    <fullName>Modern App Dev -- Pivotal</fullName>
                </value>
                <value>
                    <fullName>Modern Application</fullName>
                </value>
                <value>
                    <fullName>ROBO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_ECS_GPU_Accelerated_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UDS ECS GPU Accelerated (Opp)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UDS_ECS_GPU_Accelerated_Secondary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UDS ECS GPU Accelerated (Secondary)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UDS_ECS_ISV_Opp__c</fullName>
        <label>UDS ECS ISV (Opp)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_ECS_Application_Opp__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning -- Caffe2</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- CNTK</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- GLUON</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Intel</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Keras</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- MxNet</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Proprietary (Federal)</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Proprietary (Research Inst.)</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- PyTorch</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- SparkML</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- TensorFlow</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Unknown</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Cloudera</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hortonworks</fullName>
                </value>
                <value>
                    <fullName>Analytics -- IBM BigInsights</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Rainstor</fullName>
                </value>
                <value>
                    <fullName>Analytics -- SAS-Grid</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Splunk</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Tick Data</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive -- NICE</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive -- Other</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive -- Verint</fullName>
                </value>
                <value>
                    <fullName>Archive -- Content -- Satellite Images / GIS -- Other</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- Axway Syncplicity</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- EMC SourceOne</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- Home Grown or No ISV</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- Hyland Onbase</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- IBM Content Collector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_ECS_ISV_Secondary__c</fullName>
        <label>UDS ECS ISV (Secondary)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_ECS_Application_Secondary__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning -- Caffe2</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- CNTK</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- GLUON</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Intel</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Keras</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- MxNet</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Proprietary (Federal)</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Proprietary (Research Inst.)</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- PyTorch</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- SparkML</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- TensorFlow</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Unknown</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Cloudera</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hortonworks</fullName>
                </value>
                <value>
                    <fullName>Analytics -- IBM BigInsights</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Rainstor</fullName>
                </value>
                <value>
                    <fullName>Analytics -- SAS-Grid</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Splunk</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Tick Data</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive -- NICE</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive -- Other</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive -- Verint</fullName>
                </value>
                <value>
                    <fullName>Archive -- Content -- Satellite Images / GIS -- Other</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- Axway Syncplicity</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- EMC SourceOne</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- Home Grown or No ISV</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- Hyland Onbase</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive -- IBM Content Collector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_ECS_Other_Secondary__c</fullName>
        <label>UDS ECS Other (Secondary)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UDS_ECS_Other__c</fullName>
        <label>UDS ECS Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>